# gemma-media-study

./: .gitignore  README.md  analyze_youtube_gemma.py  index.html  package-lock.json  package.json  predownload_models.py  requirements.txt  vite.config.ts
.github/workflows/: build.yml
scripts/: release.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
