[package]
name = "youtube-gemma-analyzer"
version = "0.1.0"
description = "Download YouTube videos and analyze them with Gemma 4"
authors = ["local"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
